--- a/gb/19/9/2/n11493538.md
+++ b/gb/19/9/2/n11493538.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wcb2286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wcb2286/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wcb2286/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wcb2286/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wcb2286/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wcb2286/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wcb2286/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wcb2286/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台中取经纽国影视产业   拜会《魔戒》工作室</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年09月02日讯】（大纪元记者黄玉燕台湾台中报导）台中拥有亚洲惟一造浪池等电影拍摄软硬体设备，为进一步推展在地<ahref="https://github.com/wcb2286/djy/blob/master/gb/tag/%E5%BD%B1%E8%A7%86%E4%BA%A7%E4%B8%9A.md#1">影视产业</a>发展，新闻局长长吴皇昇日前率队前往<ahref="https://github.com/wcb2286/djy/blob/master/gb/tag/%E7%BA%BD%E8%A5%BF%E5%85%B0.md#1">纽西兰</a>考察，先后参访库姆电影制片厂、《魔戒》团队维塔工作室、公园路后制公司、纽西兰国际电影节等多处民间影视产业机构，同时拜会奥克兰观光活动经济发展部、威灵市府经济发展局、纽西兰电影委员会等官方单位，寻求合作机会。</p>
-<p><ahref="https://github.com/wcb2286/djy/blob/master/gb/tag/%E7%BA%BD%E8%A5%BF%E5%85%B0.md#1">纽西兰</a>为电影钜作《魔戒》拍摄地，拥有相当优异的电影后制特效技术及专业制片人才，吸引美国好莱坞等各国知名电影公司合作。为取经纽国<ahref="https://github.com/wcb2286/djy/blob/master/gb/tag/%E5%BD%B1%E8%A7%86%E4%BA%A7%E4%B8%9A.md#1">影视产业</a>发展。吴皇昇表示，此趟参访与中影八德公司皆有备而来，在合作目标明确下，每处拜会皆受到高规格接待，释出的合作善意也获得纽国正面回应，成功达成许多合作共识。</p>
-<figure id="11493541" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/09/a2981f13286ed486f5921ee4349aa4d3-450x300.jpg" alt="魔戒制作团队旗下子公司公园路后期制作中心。" width="500" /><figcaption class="wp-caption-text">魔戒制作团队旗下子公司公园路后期制作中心。（台中市政府提供）</figcaption></figure>
+<p>【大纪元2019年09月02日讯】（大纪元记者黄玉燕台湾台中报导）台中拥有亚洲惟一造浪池等电影拍摄软硬体设备，为进一步推展在地<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BD%B1%E8%A7%86%E4%BA%A7%E4%B8%9A.md#1">影视产业</a>发展，新闻局长长吴皇昇日前率队前往<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E8%A5%BF%E5%85%B0.md#1">纽西兰</a>考察，先后参访库姆电影制片厂、《魔戒》团队维塔工作室、公园路后制公司、纽西兰国际电影节等多处民间影视产业机构，同时拜会奥克兰观光活动经济发展部、威灵市府经济发展局、纽西兰电影委员会等官方单位，寻求合作机会。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E8%A5%BF%E5%85%B0.md#1">纽西兰</a>为电影钜作《魔戒》拍摄地，拥有相当优异的电影后制特效技术及专业制片人才，吸引美国好莱坞等各国知名电影公司合作。为取经纽国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BD%B1%E8%A7%86%E4%BA%A7%E4%B8%9A.md#1">影视产业</a>发展。吴皇昇表示，此趟参访与中影八德公司皆有备而来，在合作目标明确下，每处拜会皆受到高规格接待，释出的合作善意也获得纽国正面回应，成功达成许多合作共识。</p>
+<figure id="11493541" aria-describedby="caption-11493541" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/09/a2981f13286ed486f5921ee4349aa4d3-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/09/a2981f13286ed486f5921ee4349aa4d3-450x300.jpg" alt="魔戒制作团队旗下子公司公园路后期制作中心。" width="500" /></a><figcaption id="caption-11493541" class="wp-caption-text">魔戒制作团队旗下子公司公园路后期制作中心。（台中市政府提供）</figcaption></figure>
 <p>此外，新闻团队也拜会纽西兰国际电影节主席Catherine?Fitzgerald，介绍台中国际动画影展成果；双方有两大共识，包括推动在地动画影片在两国影展轮流放映，规划两地制片者合资共制动画影片，加强行销两地影视与观光，并培植动画人才，达到双赢局面。</p>
 <p>除了专业人才合作，新闻局也争取《魔戒》制作团队“维塔工作室”(Weta?Workshop)到台中策布展，已获正面回应，并表示明年奥克兰成立电影模型展示中心成立之后，将进一步规划。</p>
 <p>新闻局在此趟参访中也拜会了《魔戒》电影制作团队“公园路后制中心”，双方达成口头承诺，将由中影八德公司与纽国资深特效后制大师合作，开设以水景拍摄为核心的影视工作坊，盼藉跨国拍摄或合制，让台中作品在国际曝光。</p>
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/6/6/n11304395.md#1">推荐非常新人 台北电影节：深入业界争取曝光</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/6/18/n11330788.md#1">台北札幌影视合拍签约 邱瓈寛8月将赴日拍片</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/7/1/n11357037.md#1">夏季蚊子电影院放卡通   台中29区免费看</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/7/9/n11373472.md#1">曹瑞原新剧《傀儡花》温贞菱法比欧谈异国恋</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/7/22/n11401847.md#1">向好莱坞片厂看齐 全台最大片厂台中揭幕</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/19/7/23/n11403131.md#1">中台湾影视基地开幕 李安录影片致意</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/19/n12197673.md#1">日环食周日登场  错过要等195年</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/19/n12197698.md#1">端午假日来台中 观日偏食  尝金粽奖肉粽</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12194865.md#1">林炳坵墨彩书体 葫芦墩精彩展出</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12194514.md#1">29岁男子睡不好 每小时呼吸停止上百次险死　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/6/n11304395.md#1">推荐非常新人 台北电影节：深入业界争取曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/18/n11330788.md#1">台北札幌影视合拍签约 邱瓈寛8月将赴日拍片</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/1/n11357037.md#1">夏季蚊子电影院放卡通 台中29区免费看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/9/n11373472.md#1">曹瑞原新剧《傀儡花》温贞菱法比欧谈异国恋</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/22/n11401847.md#1">向好莱坞片厂看齐 全台最大片厂台中揭幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/23/n11403131.md#1">中台湾影视基地开幕 李安录影片致意</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680962.md#1">到八大行业消费要打3剂 中市警临检酒客喊冤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680620.md#1">台中YouBike2.0千站达标 最高周转率5在新光远百</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/wcb2286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185925.md#1" target="_blank">名为开放实为开抢的邓小平理论 (下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12195687.md#1">印度军人被隆重下葬 美情报透露中方损失</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12196081.md#1">长江流域洪灾泛滥 专家谈三峡大坝隐患</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12194738.md#1">蓬佩奥杨洁篪密会7小时 两国声明有何不同</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/17/n12193215.md#1">【新闻看点】北京成武汉？有市民断粮网上求援</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12195119.md#1">中印冲突 印度曝光中共军人所用“野蛮”武器</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/17/n12191577.md#1">返北京遇疫情升级 黄安被关社区外进不去</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12196437.md#1">一返京就遇疫情反弹 黄安媚共遭网民嘲讽</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/17/n12193273.md#1">米希亚参加《歌手》惨败 日媒质疑节目造假</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12196052.md#1">吴宗宪朱立伦结亲家 二女儿接受朱家外甥求婚</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/18/n12193783.md#1">费玉清《一剪梅》欧美窜红 经纪人曝近况</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/12/n12179666.md#1">黄历五月五日为什么称“端午”？</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/17/n12192100.md#1">大千世界无奇不有 那些关于借尸还魂的传说</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/10/7/21/n2972041.md#1">纯净而坚定的人生信念——持之以恒</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/20/6/17/n12192099.md#1">君子爱财取之有道 善恶之报如影随形</a></li>
-<li><a href="https://github.com/wcb2286/djy/blob/master/gb/8/11/16/n2331158.md#1">刘备化隙封官 君臣释怨皆欢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wcb2286/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wcb2286/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/2/n11493538.htm">台中取经纽国影视产业   拜会《魔戒》工作室</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/2/n11493538.htm">台中取经纽国影视产业   拜会《魔戒》工作室</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wcb2286/djy/blob/master/gb/19/9/2/n11493538.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wcb2286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wcb2286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wcb2286/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wcb2286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wcb2286/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/9/2/n11493538.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
